--- a/projects/storefrontstyles/scss/cxbase/mixins/_visible-focus.scss
+++ b/projects/storefrontstyles/scss/cxbase/mixins/_visible-focus.scss
@@ -4,4 +4,15 @@
   outline-width: var(--cx-visual-focus-width, 2px);
   outline-offset: 4px;
   transition: none;
+
+  // TODO: Remove feature flag next major
+  @include forVersion(6.8) {
+    @include media-breakpoint-down(md) {
+      outline-offset: -2px;
+      & > cx-media {
+        transition: none;
+        padding: 2px;
+      }
+    }
+  }
 }
